//
//  AppDelegate.swift
//  Example
//
//  Created by Arkadiusz Holko on 14/09/2018.
//  Copyright © 2018 Arkadiusz Holko. All rights reserved.
//

import UIKit
import DeallocationChecker

@UIApplicationMain
class AppDelegate: UIResponder, UIApplicationDelegate {

    var window: UIWindow?


    func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
        // Override point for customization after application launch.

        let isRunningUnderUITests = ProcessInfo.processInfo.environment["uitests"] != nil

        #if DEBUG
        if isRunningUnderUITests {
            DeallocationChecker.shared.setup(with: .callback(makeUITestsCallback()))
        } else {
            DeallocationChecker.shared.setup(with: .alert)
        }
        #endif

        return true
    }

    func applicationWillResignActive(_ application: UIApplication) {
        // Sent when the application is about to move from active to inactive state. This can occur for certain types of temporary interruptions (such as an incoming phone call or SMS message) or when the user quits the application and it begins the transition to the background state.
        // Use this method to pause ongoing tasks, disable timers, and invalidate graphics rendering callbacks. Games should use this method to pause the game.
    }

    func applicationDidEnterBackground(_ application: UIApplication) {
        // Use this method to release shared resources, save user data, invalidate timers, and store enough application state information to restore your application to its current state in case it is terminated later.
        // If your application supports background execution, this method is called instead of applicationWillTerminate: when the user quits.
    }

    func applicationWillEnterForeground(_ application: UIApplication) {
        // Called as part of the transition from the background to the active state; here you can undo many of the changes made on entering the background.
    }

    func applicationDidBecomeActive(_ application: UIApplication) {
        // Restart any tasks that were paused (or not yet started) while the application was inactive. If the application was previously in the background, optionally refresh the user interface.
    }

    func applicationWillTerminate(_ application: UIApplication) {
        // Called when the application is about to terminate. Save data if appropriate. See also applicationDidEnterBackground:.
    }

    private func makeUITestsCallback() -> DeallocationChecker.Callback {
        return { leakState, _, _ in
            let window = UIWindow(frame: UIScreen.main.bounds)
            window.rootViewController = UIViewController()
            window.makeKeyAndVisible()

            let message: String
            switch leakState {
            case .leaked:
                message = "leaked"
            case .notLeaked:
                message = "notLeaked"
            }

            let alertController = UIAlertController(title: "Leak Status", message: message, preferredStyle: .alert)
            alertController.addAction(.init(title: "OK", style: .cancel, handler: nil))

            window.rootViewController?.present(alertController, animated: false, completion: nil)
        }
    }
}
